# AWEBPinator

./: AGENTS.md  Cargo.toml  README.md  build.rs
.ai/: agent.md  architecture.md  repo_overview.md  task_tracker.md  workflows.md
packaging/linux/: awebpinator.desktop.in  install-awebpinator.sh.in
src/: app.rs  export.rs  lib.rs  main.rs  mp4.rs  preferences.rs  project.rs  runtime.rs  selection.rs  thumbnail.rs  timeline.rs  types.rs
tests/gui/: smoke.py
