[package]
name = "awebpinator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gdk-pixbuf = "0.21.2"
gtk = { package = "gtk4", version = "0.11.2" }
image = { version = "0.25.8", default-features = true, features = [
    "png",
    "jpeg",
    "webp",
] }
relm4 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tempfile = "3.23.0"
